# vegetation-conversion

./: MIGRATION_PLAN.md  README.md  makefile  pyproject.toml
tests/: test_import_dependencies.py  test_import_vegetation_conversion.py  test_vegetation_conversion.py
vegetation_conversion/: SAVI_from_NDVI.py  __init__.py  fAPAR_from_SAVI.py  fIPAR_from_NDVI.py  vegetation_conversion.py  version.py
